# gui

./: .gitignore  CMakeLists.txt  README.md  TestApp  configuration.json
src/: main.cpp
src/TestApp/: CMakeLists.txt
src/TestApp/src/: main.cpp
src/UI/: CMakeLists.txt  window.cpp  window.h
src/UI/src/: UIComponent.cpp  UIComponent.h  ViewManager.cpp  ViewManager.h  configuration.cpp  configuration.h  mainApp.cpp  mainApp.h
src/UI/src/components/: UIImage.cpp  UIImage.h  UIScreen.cpp  UIScreen.h  UISplash.cpp  UISplash.h  viewManager.cpp  viewManager.h
src/UI/src/configuration/: configurationLoader.cpp  configurationLoader.h
